<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/orders"
        android:title="@string/your_orders"
        android:icon="@drawable/basket_icon"/>

    <item
        android:id="@+id/profile"
        android:title="@string/your_profile"
        android:icon="@drawable/profile_icon"/>
    <item
        android:id="@+id/languages"
        android:title="@string/languages"
        android:icon="@drawable/languages_icon"/>
    <item
        android:id="@+id/info"
        android:title="@string/info"
        android:icon="@drawable/info_icon"/>
    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/share_icon"/>
    <item
        android:id="@+id/signOut"
        android:title="@string/sign_out"
        android:icon="@drawable/signout_icon"/>

</menu>